ADAPT-2325 Resolve mobile spacing for icon cards

--- a/src/scss/components/card/icon-card/_icon-card.scss
+++ b/src/scss/components/card/icon-card/_icon-card.scss
@@ -13,6 +13,7 @@ $tag-height: 70px;
       // icon
       img {
         margin-right: 0;
+        display: block;
         @include modular-spacing('margin', 4 null 1 4);
         @include grid-media-max('sm') {
           margin-top: $mobile-modular-spacing-3;
@@ -20,6 +21,7 @@ $tag-height: 70px;
           margin-left: $mobile-modular-spacing-3;
           margin-bottom: $mobile-modular-spacing-2;
         }
+
         width: auto;
         height: auto;
         max-width: $icon-size;
